--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,12 +10,12 @@ jobs:
 
     steps:
       - name: 🚚 Get latest code
-        uses: actions1
+        uses: actions/@1
         with:
           fetch-depth: 2
 
       - name: 📂 Sync folders and files to the server
-        uses: Mahdi Ghanati
+        uses: MahdiGhanati/@1
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
