--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           fetch-depth: 2
 
       - name: 📂 Sync folders and files to the server
-        uses: MahdiGhanati/FTP-Deploy-Action
+        uses: MahdiGhanati/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
