--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: '20.x'
       - run: npm ci
       - run: npm run build --if-present
-      - run: ls build
+      - run: npm publish
 
       - name: 🚚 Get latest code
         uses: actions/checkout@v4
