--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '20.x'
       - run: npm ci
-      - run: npm run build --if-present
+      - run: npm run build
 
       - name: 🚚 Get latest code
         uses: actions/checkout@v4
