--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v4
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - run: npm install
-      - run: npm run build
 
-      - name: 🚚 Get latest code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
+      - name: 🚚 Build Project
+        run: |   
+          npm install
+          npm run build
 
       - name: 📂 Sync folders and files to the server
         uses: MahdiGhanati/FTP-Deploy-Action@v4.3.5
